# search_api2

./: .gitignore  .travis.yml  CHANGELOG.md  CODEOWNERS  Dockerfile  Dockerfile.test  Makefile  README.md  coverage.xml  dev-requirements.txt  docker-compose.integration-test.yaml  docker-compose.ui-test.yaml  docker-compose.yaml  legacy-schema.yaml  legacy-service-info.yaml  msearch.tmp  pyproject.toml  requirements.txt  rpc-schema.yaml  rpc-service-info.yaml
.github/workflows/: build-and-test.yml  build-test-push.yml  codeql.yml  develop.yml  developo.yml  release.yml  run-tests.yml  test-pull-request.yml
docs/: changes 3-2020.md  ez-guide.md  integration-testing.md  local-dev-setup.md
integration-tests/: README.md  requirements.txt  test_legacy_list_types.py  test_legacy_search_objects.py  test_legacy_search_objects2.py  test_legacy_search_types.py  test_legacy_search_types2.py  test_legacy_status.py
integration-tests/clients/: searchapi_client.py
scripts/: build-integration-test-images.sh  docker_deploy  local-deploy.sh  run-dev-server.sh  run_integration_tests  run_integration_tests.sh  run_tests  run_tests.sh  start_server.sh
src/: check_if_doc_accessible.py  check_if_doc_exists.py  exceptions.py  handle_legacy.py  jsonrpcbase.py  main.py  search_objects.py  show_indexes.py  workspace_auth.py
src-old/legacy_methods/: main.py
src-old/methods/: show_indexes.py
src-old/schemas/: legacy_methods.yaml
src/clients/: user_profile.py  workspace.py
src/server/: main.py  (+3 more)
test/: test_api.py  test_legacy.py  wait_for_service.py
tests/: docker-compose-ci.yaml
(+176 files in other folders)
