[tool.poetry]
name = "kbase_search2"
version = "0.0.1"
description = "Search API"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
sanic = "20.12.2"
requests = "2.25.1"
jsonschema = "3.2.0"
pyyaml = "5.4.1"
kbase-jsonrpcbase = "0.3.0a6"
kbase-jsonrpc11base = {git="https://github.com/eapearson/kbase-jsonrpc11base", branch="v0.1.0"}


[tool.poetry.dev-dependencies]
mypy = "0.812"
bandit = "1.7.0"
mccabe = "0.6.1"
flake8 = "3.8.4"
coverage = "5.5"
pytest = "6.2.2"
pytest-cov = "2.11.1"
responses = "0.12.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
